Bug 1656211 - Use GLX_EXT_buffer_age with GLXContext if supported. r=kvark

When swapping buffers with a GLX context, the back buffer may no longer
be valid. We can determine this by checking the buffer age via the
GLX_EXT_buffer_age extension, which is similar to the EGL_EXT_buffer_age
we use with EGL. If it is 0, then we must redraw the entire frame.

Differential Revision: https://phabricator.services.mozilla.com/D93098